<resources>
    <string name="app_name">JetBukuku</string>
    <string name="menu_home">Home</string>
    <string name="menu_library">Library</string>
    <string name="menu_profile">Profile</string>
    <string name="add_to_library">Tambah ke Daftar Baca</string>
    <string name="back">Back</string>
    <string name="title">Judul</string>
    <string name="author">Penulis</string>
    <string name="year">Tahun Terbit</string>
    <string name="desc">Sinopsis</string>
    <string name="share_message">Hello budies, I want to read $title right now!</string>
    <string name="share_book">Bagikan</string>
    <string name="book_bukuku">Bukuku Library</string>
    <string name="name">Karina Aulia Primanti Putri</string>
    <string name="email">karinaauliaprimanti1412@gmail.com</string>
    <string name="search_book">Cari Judul Buku</string>
</resources>