...
        )

        LazyVerticalGrid(
            state = gridState,
            columns = GridCells.Adaptive(160.dp),
            contentPadding = PaddingValues(bottom = 80.dp),
            modifier = modifier.testTag("BookList")
        ) {
            items(book) { data ->
                BookItem(
                    image = data.image,
                    title = data.title,
                    author = data.author,
...
